# mgb-vechy

./: .gitignore  README.md  pyproject.toml  todo.md
.devcontainer/: Dockerfile  devcontainer.json
docs/: refactor_goal.md  stage1_roi_cli.md  stage2_aggregation_cli.md
docs/plan/: README.md  hru_mapping.md  mgb_files.md  mini_sampling.md  terrain_products.md
docs/superpowers/plans/: 2026-05-29-stage-1-roi-migration.md
docs/superpowers/specs/: 2026-05-29-stage-1-roi-design.md
src/mgb_vec_hydro/: __init__.py  aggregation.py  cli.py  exceptions.py  io.py  roi.py  terrain.py  topology.py
tests/: test_aggregation.py  test_cli.py  test_import_boundaries.py  test_io.py  test_roi.py  test_terrain.py  test_topology.py
tests/benchmark/: test_terrain_scaling.py
tests/carinhanha/input/: hlc.tif  input_params.yml
tests/carinhanha/output/: COTA_AREA.flp  MINI.gtp  bho2mini.dbf  bho2mini.shx  mareas.dbf  mareas.shx  minis_mgb.dbf  minis_mgb.shx  mtrecs.dbf  mtrecs.shp  mtrecs.shx  roi_areas.dbf  roi_trecs.dbf  roi_trecs.shp  roi_trecs.shx
tests/regression/: test_carinhanha_aggregation.py  test_carinhanha_roi.py  test_carinhanha_terrain.py
